// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test 1`] = `
{
  "Outputs": {
    "fastifyAppApiEndpointC51352AA": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "fastifyAppApi4B7A160F",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "fastifyAppApiDeploymentStageprod9CC17FB8",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "fastifyAppApi4B7A160F": {
      "Properties": {
        "Name": "fastifyAppApi",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "fastifyAppApiANYApiPermissionTestStackfastifyAppApi1F207F31ANY328FE2C1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fastifyImageFunction7241F15F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "fastifyAppApi4B7A160F",
              },
              "/",
              {
                "Ref": "fastifyAppApiDeploymentStageprod9CC17FB8",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "fastifyAppApiANYApiPermissionTestTestStackfastifyAppApi1F207F31ANYF5B7426A": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fastifyImageFunction7241F15F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "fastifyAppApi4B7A160F",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "fastifyAppApiANYBEF154FB": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "fastifyImageFunction7241F15F",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "fastifyAppApi4B7A160F",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "fastifyAppApi4B7A160F",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "fastifyAppApiAccountD8BAAB5C": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "fastifyAppApi4B7A160F",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "fastifyAppApiCloudWatchRole8AB1E821",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "fastifyAppApiCloudWatchRole8AB1E821": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "fastifyAppApiDeployment35BD0E1Eb6c9fa6b42f9983d119732505eced88c": {
      "DependsOn": [
        "fastifyAppApiproxyANYF353B5CC",
        "fastifyAppApiproxyD4144B33",
        "fastifyAppApiANYBEF154FB",
      ],
      "Properties": {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": {
          "Ref": "fastifyAppApi4B7A160F",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "fastifyAppApiDeploymentStageprod9CC17FB8": {
      "DependsOn": [
        "fastifyAppApiAccountD8BAAB5C",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "fastifyAppApiDeployment35BD0E1Eb6c9fa6b42f9983d119732505eced88c",
        },
        "RestApiId": {
          "Ref": "fastifyAppApi4B7A160F",
        },
        "StageName": "prod",
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "fastifyAppApiproxyANYApiPermissionTestStackfastifyAppApi1F207F31ANYproxyF14BC856": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fastifyImageFunction7241F15F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "fastifyAppApi4B7A160F",
              },
              "/",
              {
                "Ref": "fastifyAppApiDeploymentStageprod9CC17FB8",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "fastifyAppApiproxyANYApiPermissionTestTestStackfastifyAppApi1F207F31ANYproxy7AB2ACF4": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fastifyImageFunction7241F15F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "fastifyAppApi4B7A160F",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "fastifyAppApiproxyANYF353B5CC": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "fastifyImageFunction7241F15F",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "fastifyAppApiproxyD4144B33",
        },
        "RestApiId": {
          "Ref": "fastifyAppApi4B7A160F",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "fastifyAppApiproxyD4144B33": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "fastifyAppApi4B7A160F",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "fastifyAppApi4B7A160F",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "fastifyImageFunction7241F15F": {
      "DependsOn": [
        "fastifyImageFunctionServiceRole02502A60",
      ],
      "Properties": {
        "Code": {
          "ImageUri": {
            "Fn::Sub": "\${AWS::AccountId}.dkr.ecr.\${AWS::Region}.\${AWS::URLSuffix}/cdk-hnb659fds-container-assets-\${AWS::AccountId}-\${AWS::Region}:cb4a5cd4dcd380bf5ef8a6145579cd7f19e893df71648fcb437d46ccad18ee28",
          },
        },
        "Environment": {
          "Variables": {
            "DATABASE_URL": "postgres://dummy:5443/mydb",
            "STAGE": "PRODUCTION",
          },
        },
        "PackageType": "Image",
        "Role": {
          "Fn::GetAtt": [
            "fastifyImageFunctionServiceRole02502A60",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "fastifyImageFunctionServiceRole02502A60": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`snapshot test2 1`] = `
{
  "Outputs": {
    "helloApiEndpoint79747C48": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "helloApiC07BB54E",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "helloApiDeploymentStageprod7750D22A",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "fastapiImageFunction71E77DE5": {
      "DependsOn": [
        "fastapiImageFunctionServiceRole3A220E2F",
      ],
      "Properties": {
        "Code": {
          "ImageUri": {
            "Fn::Sub": "\${AWS::AccountId}.dkr.ecr.\${AWS::Region}.\${AWS::URLSuffix}/cdk-hnb659fds-container-assets-\${AWS::AccountId}-\${AWS::Region}:d2f382c3e5baab6d345d6794b2dc5dea4602d8ce5bf11ce319e6783ae7689e58",
          },
        },
        "PackageType": "Image",
        "Role": {
          "Fn::GetAtt": [
            "fastapiImageFunctionServiceRole3A220E2F",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "fastapiImageFunctionServiceRole3A220E2F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "helloApiAccount6998B082": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "helloApiC07BB54E",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "helloApiCloudWatchRole1F6DE70F",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "helloApiC07BB54E": {
      "Properties": {
        "Name": "helloApi",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "helloApiCloudWatchRole1F6DE70F": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "helloApiDeploymentBA401403b9bc720a531ecb33765c20aa6c3d5d81": {
      "DependsOn": [
        "helloApidocsGETE485BD85",
        "helloApidocsFA4D4C7A",
        "helloApiGETE95C1F00",
        "helloApihelloGETEBA2CA81",
        "helloApihello6078C67F",
        "helloApihello2GET30529AED",
        "helloApihello2AB3DD99B",
        "helloApiopenapijsonGETADBBFC3F",
        "helloApiopenapijsonFE52D5BA",
      ],
      "Properties": {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": {
          "Ref": "helloApiC07BB54E",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "helloApiDeploymentStageprod7750D22A": {
      "DependsOn": [
        "helloApiAccount6998B082",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "helloApiDeploymentBA401403b9bc720a531ecb33765c20aa6c3d5d81",
        },
        "RestApiId": {
          "Ref": "helloApiC07BB54E",
        },
        "StageName": "prod",
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "helloApiGETApiPermissionTestStackhelloApiF394A989GET454F703C": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fastapiImageFunction71E77DE5",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "helloApiC07BB54E",
              },
              "/",
              {
                "Ref": "helloApiDeploymentStageprod7750D22A",
              },
              "/GET/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "helloApiGETApiPermissionTestTestStackhelloApiF394A989GETBE9AA1CA": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fastapiImageFunction71E77DE5",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "helloApiC07BB54E",
              },
              "/test-invoke-stage/GET/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "helloApiGETE95C1F00": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "fastapiImageFunction71E77DE5",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "helloApiC07BB54E",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "helloApiC07BB54E",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "helloApidocsFA4D4C7A": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "helloApiC07BB54E",
            "RootResourceId",
          ],
        },
        "PathPart": "docs",
        "RestApiId": {
          "Ref": "helloApiC07BB54E",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "helloApidocsGETApiPermissionTestStackhelloApiF394A989GETdocsE0481773": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fastapiImageFunction71E77DE5",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "helloApiC07BB54E",
              },
              "/",
              {
                "Ref": "helloApiDeploymentStageprod7750D22A",
              },
              "/GET/docs",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "helloApidocsGETApiPermissionTestTestStackhelloApiF394A989GETdocsEAF83031": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fastapiImageFunction71E77DE5",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "helloApiC07BB54E",
              },
              "/test-invoke-stage/GET/docs",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "helloApidocsGETE485BD85": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "fastapiImageFunction71E77DE5",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "helloApidocsFA4D4C7A",
        },
        "RestApiId": {
          "Ref": "helloApiC07BB54E",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "helloApihello2AB3DD99B": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "helloApiC07BB54E",
            "RootResourceId",
          ],
        },
        "PathPart": "hello2",
        "RestApiId": {
          "Ref": "helloApiC07BB54E",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "helloApihello2GET30529AED": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "helloImageFunction7B41B444",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "helloApihello2AB3DD99B",
        },
        "RestApiId": {
          "Ref": "helloApiC07BB54E",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "helloApihello2GETApiPermissionTestStackhelloApiF394A989GEThello2E74C3EDF": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "helloImageFunction7B41B444",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "helloApiC07BB54E",
              },
              "/",
              {
                "Ref": "helloApiDeploymentStageprod7750D22A",
              },
              "/GET/hello2",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "helloApihello2GETApiPermissionTestTestStackhelloApiF394A989GEThello2CA5EA1FF": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "helloImageFunction7B41B444",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "helloApiC07BB54E",
              },
              "/test-invoke-stage/GET/hello2",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "helloApihello6078C67F": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "helloApiC07BB54E",
            "RootResourceId",
          ],
        },
        "PathPart": "hello",
        "RestApiId": {
          "Ref": "helloApiC07BB54E",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "helloApihelloGETApiPermissionTestStackhelloApiF394A989GEThelloADA09C0E": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "helloImageFunction7B41B444",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "helloApiC07BB54E",
              },
              "/",
              {
                "Ref": "helloApiDeploymentStageprod7750D22A",
              },
              "/GET/hello",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "helloApihelloGETApiPermissionTestTestStackhelloApiF394A989GEThello38E4ED98": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "helloImageFunction7B41B444",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "helloApiC07BB54E",
              },
              "/test-invoke-stage/GET/hello",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "helloApihelloGETEBA2CA81": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "helloImageFunction7B41B444",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "helloApihello6078C67F",
        },
        "RestApiId": {
          "Ref": "helloApiC07BB54E",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "helloApiopenapijsonFE52D5BA": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "helloApiC07BB54E",
            "RootResourceId",
          ],
        },
        "PathPart": "openapi.json",
        "RestApiId": {
          "Ref": "helloApiC07BB54E",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "helloApiopenapijsonGETADBBFC3F": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "fastapiImageFunction71E77DE5",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "helloApiopenapijsonFE52D5BA",
        },
        "RestApiId": {
          "Ref": "helloApiC07BB54E",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "helloApiopenapijsonGETApiPermissionTestStackhelloApiF394A989GETopenapijson9B2C6546": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fastapiImageFunction71E77DE5",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "helloApiC07BB54E",
              },
              "/",
              {
                "Ref": "helloApiDeploymentStageprod7750D22A",
              },
              "/GET/openapi.json",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "helloApiopenapijsonGETApiPermissionTestTestStackhelloApiF394A989GETopenapijsonDC5C4303": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fastapiImageFunction71E77DE5",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "helloApiC07BB54E",
              },
              "/test-invoke-stage/GET/openapi.json",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "helloImageFunction7B41B444": {
      "DependsOn": [
        "helloImageFunctionServiceRoleFA0AE26A",
      ],
      "Properties": {
        "Code": {
          "ImageUri": {
            "Fn::Sub": "\${AWS::AccountId}.dkr.ecr.\${AWS::Region}.\${AWS::URLSuffix}/cdk-hnb659fds-container-assets-\${AWS::AccountId}-\${AWS::Region}:e5948586eeb3c45e2f79e0634039a5046d9c6de8201822426a18bf72ed43063d",
          },
        },
        "PackageType": "Image",
        "Role": {
          "Fn::GetAtt": [
            "helloImageFunctionServiceRoleFA0AE26A",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "helloImageFunctionServiceRoleFA0AE26A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
